--- a/app/(pages)/_components/Powder/Powder.module.scss
+++ b/app/(pages)/_components/Powder/Powder.module.scss
@@ -1,9 +1,12 @@
 .card {
-   width: 20%;
    background-color: rgb(228, 239, 239);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 20%;
+   margin: 15px;
+   width: 20vw;
+   height: 40vh;
+   box-sizing: border-box;
 }
   
   .card:hover {
@@ -11,5 +14,5 @@
   }
 
   .container {
-    padding: 20px;
+    padding: 40px 60px;
   }
