--- a/app/(pages)/powders/_components/Example/PowderSearch.module.scss
+++ b/app/(pages)/powders/_components/Example/PowderSearch.module.scss
@@ -9,3 +9,11 @@
 .powder {
     margin: 20px;
 }
+
+.search {
+    padding: 1rem;
+    margin-bottom: 5rem;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    width: 80%;
+}
