--- a/app/(pages)/powders/page.module.scss
+++ b/app/(pages)/powders/page.module.scss
@@ -1,4 +1,8 @@
 .body {
     display: flex;
     padding: 50px;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
 }
