Update powder card display
Add tag layout

--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -8,6 +8,7 @@
     --secondary: #99D3B7;
     --light-background: #CEE4D7;
     --dark-background: #559575;
+    --med-blue: #85a3e4;
 
     --text-dark: #1D623F;
     --text-light: #C3F2D5;
