--- a/app/(pages)/_components/Powder/Powder.module.scss
+++ b/app/(pages)/_components/Powder/Powder.module.scss
@@ -29,7 +29,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  gap: 30px;
 }
 
 .brandTag {
@@ -37,6 +37,7 @@
   color: white;
   background-color: var(--base-green);
   padding: 8px 16px;
+  font-size: 0.8rem;
 }
 
 .infoTag {
@@ -52,4 +53,5 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  font-size: 0.8rem;
 }
