--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -33,8 +33,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: var(--font-roboto);
   color: var(--text-dark);
+  font-family: var(--font-roboto);
 }
 
 a {
@@ -44,6 +44,7 @@ a {
 
 h1 {
     font-size: 3rem;
+
 }
 h2 {
     font-size: 2.5rem;
@@ -57,3 +58,10 @@ h4 {
 p {
     font-size: 1rem;
 }
+
+.headText {
+  font-family: var(--font-playfair-italic);
+  font-style: italic;
+  font-weight: 100;
+  letter-spacing: 1px;
+  }
