--- a/app/(pages)/_components/Popup/Popup.module.scss
+++ b/app/(pages)/_components/Popup/Popup.module.scss
@@ -12,22 +12,140 @@
   }
   
   .popup {
-    background: white;
-    padding: 20px;
-    max-width: 600px;
+    background: var(--card-background);
+    padding: 30px;
+    max-width: 800px;
+    max-height: 600px;
     width: 100%;
-    border-radius: 8px;
+    border-radius: 16px;
     position: relative;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 8px;
+    overflow-y: scroll;
   }
   
   .closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
     border: none;
     background: transparent;
     font-size: 20px;
     cursor: pointer;
   }
+
+  .tagContainer {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin: 0px 10px;
+  }
+
+  .reviewTop {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 10px;
+  }
+
+  .container > * {
+    margin: 10px;
+  }
+
+  .reviewContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .reviewContainer > * {
+    margin: 10px;
+  }
+
+  .reviewForm {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+  }
+
+  .formElement {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+ .input {
+    padding: 4px;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .reviewBox {
+    width: 300px;
+    height: 100px;
+    padding: 4px;
+    border: none;
+    border-radius: 4px;
+    overflow-y: scroll;
+  }
+
+  .button {
+    width: fit-content;
+    height: fit-content;
+    border: none;
+    padding: 8px 16px;
+    background-color: var(--base-green);
+    color: white;
+    border-radius: 25px;
+  }
+
+  .review {
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: white;
+    padding: 20px;
+    height: auto;
+    box-sizing: border-box;
+  }
   
+  .reviewList {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
+    justify-items: stretch;
+    align-items: start; 
+  }
+
+  .user {
+    background-color: var(--light-blue);
+    color: white;
+    padding: 4px 8px;
+    border-radius: 15px;
+    font-size: 0.9rem;
+  }
+
+  .rating {
+    background-color: var(--secondary);
+    color: white;
+    padding: 4px 8px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    font-size: 0.9rem;
+  }
+
+  .text {
+    font-size: 0.9rem;
+    margin: 10px 0px;
+  }
