--- a/app/(pages)/_components/Powder/Powder.module.scss
+++ b/app/(pages)/_components/Powder/Powder.module.scss
@@ -1,5 +1,5 @@
 .card {
-   background-color: rgb(228, 239, 239);
+   background-color: var(--card-background);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 20%;
@@ -30,21 +30,6 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
-}
-
-.brandTag {
-  border-radius: 25px;
-  color: white;
-  background-color: var(--base-green);
-  padding: 8px 16px;
-  font-size: 0.8rem;
-}
-
-.infoTag {
-  border-radius: 25px;
-  color: white;
-  background-color: var(--med-blue);
-  padding: 8px 16px;
 }
 
 .tagContainer {
