--- a/app/(pages)/(index-page)/_components/Hero/Hero.module.scss
+++ b/app/(pages)/(index-page)/_components/Hero/Hero.module.scss
@@ -13,17 +13,17 @@
     }
 
     .img_container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: black;
-        z-index: -1;
+        width: 50%;
+        height: 100%;
+        background-color: #588764;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: var(--medium-spacer);
     }
 
     .welcome {
-        width: 100%;
+        width: 50%;
         max-width: 1620px;
         height: 100%;
         border-radius: var(--b-radius);
@@ -33,9 +33,51 @@
         justify-content: center;
         text-align: center;
         padding: var(--spacer);
+        opacity: 1;
 
         > h1 {
             color: var(--text-light);
         }
     }
+}
+
+.text_overlay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    text-align: center;
+    color: var(--text-light);
+    gap: 16px;
+  }
+
+.bigText {
+    font-family: var(--font-playfair-italic);
+    font-style: italic;
+    font-weight: 100;
+    letter-spacing: 1px;
+    font-size: 8rem;
+}
+
+.text {
+    font-family: var(--font-playfair-italic);
+    color: var(--text-light);
+    font-style: italic;
+    font-weight: 100;
+    letter-spacing: 1px;
+    font-size: 3rem;
+}
+
+a.button {
+    padding: 1px 6px;
+    border: 1px solid  var(--text-light);
+    border-radius: 25px;
+    color: var(--text-light);
+    background-color: transparent;
+    text-decoration: none;
+    margin: 16px;
+    padding: 16px;
 }
