--- a/app/(pages)/_components/Navbar/Navbar.module.scss
+++ b/app/(pages)/_components/Navbar/Navbar.module.scss
@@ -20,7 +20,7 @@ $scale: 1.04;
     justify-content: space-between;
     align-items: center;
 
-    background-color: var(--primary);
+    background-color: var(--text-dark);
 
     >h2 {
         color: var(--text-light);
