--- a/app/(pages)/powders/_components/Example/PowderSearch.module.scss
+++ b/app/(pages)/powders/_components/Example/PowderSearch.module.scss
@@ -1,30 +1,48 @@
 .body {
     display: flex;
     flex-direction: column;
+    gap: 3vh;
     justify-content: flex-start;
     align-items: center;
     min-width: 80vw;
     min-height: 100vh;
-    padding: 20px;
+    padding: 8px;
     box-sizing: border-box;
 }
 
-.container {
+.powderContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    min-height: 200px; /* Prevent collapse */
+    min-height: 200px;
+    margin: 16px;
 }
 
 .search {
     padding: 1rem;
-    margin-bottom: 5rem;
     border-radius: 10px;
     border: 1px solid #ccc;
     flex-shrink: 0;
     width: 100%;
-    max-width: 700px;
+    max-width: 65vw;
     box-sizing: border-box;
+}
+
+.infoContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 24px;
+    max-width: 70vw;
+}
+
+.infoLine {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
 }
