Small visual updates

--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -12,7 +12,7 @@
     --light-blue: #b0c6f5;
     --card-background: rgb(228, 239, 239);
 
-    --text-dark: #1D623F;
+    --text-dark: #15452d;
     --text-light: #C3F2D5;
 
     /* spacers */
