--- a/app/(pages)/_components/Popup/Popup.module.scss
+++ b/app/(pages)/_components/Popup/Popup.module.scss
@@ -123,7 +123,7 @@
   .reviewList {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 20px;
+    gap: 20px;
     justify-items: stretch;
     align-items: start; 
   }
@@ -151,4 +151,10 @@
   .text {
     font-size: 0.9rem;
     margin: 10px 0px;
+  }
+
+  .divider{
+    border-top: 1.5px solid var(--text-dark);
+    margin-top: 12px;
+    width: 100%;
   }
