--- a/app/(pages)/_components/Powder/Powder.module.scss
+++ b/app/(pages)/_components/Powder/Powder.module.scss
@@ -2,15 +2,22 @@
    background-color: var(--card-background);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
-   border-radius: 20%;
-   width: 300px;
-   height: 300px;
+   border-radius: 15px;
+   width: 250px;
+   height: 250px;
    box-sizing: border-box;
    display: flex;
+   flex-direction: row;
    justify-content: center;
    align-items: center;
-   padding: 16px;
    text-align: center;
+   overflow: hidden;
+}
+
+.bar {
+  background-color: #799C84;
+  width: 30px;
+  height: 250px;
 }
   
   .card:hover {
@@ -26,17 +33,31 @@
 
 .cardContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: var(--spacer);
 }
 
 .tagContainer {
   display: flex;
-  gap: 12px;
+  gap: var(--tiny-spacer);
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  font-size: 0.8rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: var(--small-spacer);
+}
+
+.headText {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: var(--tiny-spacer);
 }
