--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -6,14 +6,15 @@
 
     --primary: var(--base-green);
     --secondary: #8dbfa7;
-    --light-background: #CEE4D7;
+    --light-background: #EDF3F5;
     --dark-background: #559575;
-    --med-blue: #85a3e4;
+    --med-blue: #93AFDD;
     --light-blue: #b0c6f5;
-    --card-background: rgb(228, 239, 239);
+    --card-background: #FBFFFC;
 
-    --text-dark: #15452d;
+    --text-dark: #334436;
     --text-light: #C3F2D5;
+    --text-sub: #7A937E;
 
     /* spacers */
     --tiny-spacer: 8px;
@@ -36,7 +37,8 @@
   padding: 0;
   margin: 0;
   color: var(--text-dark);
-  font-family: var(--font-roboto);
+  font-family: var(--font-inter);
+  font-weight: 300;
 }
 
 a {
@@ -62,9 +64,8 @@ p {
 }
 
 .headText {
-  font-family: var(--font-playfair-italic);
-  font-style: italic;
-  font-weight: 100;
+  font-family: var(--font-inter);
+  font-weight: 300;
   letter-spacing: 1px;
   }
 
@@ -78,13 +79,17 @@ p {
     height: fit-content;
     flex-shrink: 0;
   }
+
+  .brandText {
+    color: var(--text-sub);
+    font-weight: 300;
+  }
   
   .infoTag {
     border-radius: 25px;
     color: white;
     background-color: var(--med-blue);
-    padding: 8px 16px;
-    font-size: 0.8rem;
+    padding: 6px 12px;
     width: fit-content;
     height: fit-content;
     flex-shrink: 0;
