--- a/app/(pages)/powders/_components/Example/PowderList.module.scss
+++ b/app/(pages)/powders/_components/Example/PowderList.module.scss
@@ -15,9 +15,10 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
     min-height: 200px;
     margin: 16px;
+    min-width: 100%;
 }
 
 .search {
