--- a/app/(pages)/_components/Popup/Popup.module.scss
+++ b/app/(pages)/_components/Popup/Popup.module.scss
@@ -139,7 +139,7 @@
   }
 
   .user {
-    background-color: var(--light-blue);
+    background-color: var(--med-blue);
     color: white;
     padding: 4px 8px;
     border-radius: 15px;
@@ -147,7 +147,7 @@
   }
 
   .rating {
-    background-color: var(--secondary);
+    background-color: var(--medium);
     color: white;
     padding: 4px 8px;
     border-radius: 15px;
@@ -167,4 +167,19 @@
     border-top: 1.5px solid var(--text-sub);
     margin-top: 12px;
     width: 100%;
+  }
+
+  .light {
+    background-color: var(--light);
+    color: var(--text-dark);
+  }
+  
+  .medium {
+    background-color: var(--medium);
+    color: white;
+  }
+  
+  .rich {
+    background-color: var(--rich);
+    color: white;
   }
