--- a/app/(pages)/powders/page.module.scss
+++ b/app/(pages)/powders/page.module.scss
@@ -1,8 +1,8 @@
 .body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: flex-start;
     min-height: 100vh;
     min-width: 100vw;
     padding: 50px;
@@ -14,4 +14,17 @@
     justify-content: center;
     align-items: center;
     min-width: 100%;
+}
+
+.searchContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--small-spacer);
+    width: 100%;
+    max-width: 600px;
+    position: static;
+    top: 0;
+    padding: 10px;
 }
