show list of favorites

--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -9,6 +9,8 @@
     --light-background: #EDF3F5;
     --med-blue: #93AFDD;
     --light-blue: #b0c6f5;
+    --med-gray: #ccc;
+    --light-gray: #fafafa;
     --card-background: #FBFFFC;
 
     --text-dark: #334436;
