--- a/app/(pages)/powders/_components/Example/SearchBar.module.scss
+++ b/app/(pages)/powders/_components/Example/SearchBar.module.scss
@@ -22,7 +22,7 @@
 .search {
     padding: 1rem;
     border-radius: 25px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--med-gray);
     flex-shrink: 0;
     width: 100%;
     max-width: 65vw;
