--- a/app/(pages)/powders/_components/Example/PowderList.module.scss
+++ b/app/(pages)/powders/_components/Example/PowderList.module.scss
@@ -1,12 +1,11 @@
 .body {
     display: flex;
     flex-direction: column;
-    gap: 3vh;
+    gap: var(--tiny-spacer);
     justify-content: flex-start;
     align-items: center;
-    min-width: 80vw;
+    min-width: 98vw;
     min-height: 100vh;
-    padding: 8px;
     box-sizing: border-box;
 }
 
@@ -17,33 +16,33 @@
     align-items: center;
     gap: 30px;
     min-height: 200px;
-    margin: 16px;
+    margin: var(--small-spacer);
     min-width: 100%;
 }
 
-.search {
-    padding: 1rem;
-    border-radius: 25px;
-    border: 1px solid #ccc;
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 65vw;
-    box-sizing: border-box;
-}
-
-.infoContainer {
+.toggleButton {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    justify-content: flex-start;
-    gap: 24px;
-    max-width: 70vw;
-}
+    gap: var(--tiny-spacer);
+    padding: 10px 16px;
+    color: (--text-dark);
+    background-color: var(--card-background);
+    border: none;
+    border-radius: 8px;
+    font-weight: 400;
+    cursor: pointer;
+  
+    &:hover {
+      background-color: var(--light-gray);
+    }
+  }
 
-.infoLine {
+.favToggle {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 12px;
+    align-self: flex-start;
+    margin-left: 100px;
 }
+  
